# less-WiringPi

./: .gitignore  README.md  makeit
devLib/: ds1302.c  gertboard.c  lcd.c  lcd128x64.c  maxdetect.c  piFace.c  piFaceOld.c  piGlow.c  piNes.c  scrollPhat.c
examples/: blink-thread.c  blink.c  blink12.c  blink12drcs.c  blink6drcs.c  blink8-drcn.c  blink8.c  clock.c  ds1302.c  isr-osc.c  isr.c  isr3.c  lcd-adafruit.c  lcd.c  lowPower.c  max31855.c  nes.c  okLed.c  pwm.c  rht03.c  serialTest.c  servo.c  softPwm.c  softTone.c  speed.c  spiSpeed.c  wfi.c
examples/Gertboard/: 7segments.c  buttons.c  gertboard.c  record.c  temperature.c  voltmeter.c  vumeter.c
examples/PiFace/: blink.c  buttons.c  ladder.c  metro.c  motor.c  reaction.c
examples/PiGlow/: piGlow0.c  piGlow1.c  piglow.c
examples/q2w/: binary.c  blink-io.c  blink.c  bright.c  button.c  volts.c
examples/scrollPhat/: scphat.c
gpio/: gpio.c  readall.c
wiringPi/: CMakeLists.txt  Makefile  ads1115.c  max31855.c  max5322.c  mcp3002.c  mcp3004.c  mcp3422.c  mcp4802.c  pseudoPins.c  sn3218.c  wiringPi.c  wiringPi.h  wiringPiLegacy.c
wiringPi/test/: wiringpi_spi_test1_mcp3202.c  wiringpi_xotest_test1_spi.c  wpi_test.h
wiringPiD/: runRemote.c  wiringpid.c
